--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
     <distributionManagement>
         <repository>
             <id>releases</id>
-            <url>https://repositories.thenextlvl.net/repository/releases/</url>
+            <url>https://repo.thenextlvl.net/repository/maven-public/</url>
         </repository>
     </distributionManagement>
 
