--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
     <distributionManagement>
         <repository>
             <id>releases</id>
-            <url>https://repo.thenextlvl.net/repository/maven-public/</url>
+            <url>https://repo.thenextlvl.net/releases</url>
         </repository>
     </distributionManagement>
 
@@ -43,7 +43,7 @@
     <repositories>
         <repository>
             <id>releases</id>
-            <url>https://repo.thenextlvl.net/repository/maven-public</url>
+            <url>https://repo.thenextlvl.net/releases</url>
         </repository>
         <repository>
             <id>papermc</id>
